--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "random.foobars.in",
+  "name": "random.harsh.cloud",
   "scripts": {
     "dev": "snowpack dev",
     "build": "snowpack build"
   },
   "devDependencies": {
-    "snowpack": "^3.0.1"
+    "snowpack": "^3.8.7"
   },
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
